# nuage

./: .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  REFACTOR.md  TODO.md  diagnosis.md  info.md  physics.md  plan.md  run.sh  terrain.md  todo.md  todos.md
.cache/clangd/index/: Aircraft.cpp.18DA402A53584889.idx  Aircraft.hpp.9FA4E06FBADF3149.idx  AircraftManager.cpp.1AA31DA7EA3E457A.idx  AircraftManager.hpp.87DBB77E01135EC9.idx  App.cpp.4ABF884769111611.idx  App.hpp.5E5728E8B6534E2C.idx  AtmosphereManager.cpp.CF2C9B0971971694.idx  AtmosphereManager.hpp.5F495ADFC1F09A89.idx  CameraManager.cpp.B6BC3DA992BCE451.idx  CameraManager.hpp.4795DA4B586F4603.idx  EngineSystem.cpp.F8DFCAA3BA0621CB.idx  EngineSystem.hpp.4E91B379270302B8.idx  FlightDynamics.cpp.1710925B4698FB89.idx  FlightDynamics.hpp.0D56B616FC4AD7D6.idx  FuelSystem.cpp.C537FDD3A22BB722.idx  FuelSystem.hpp.421613EB9D49F3D1.idx  IAircraftSystem.hpp.63E470C287706281.idx  InputManager.cpp.7FFFD80887ED3FF6.idx  InputManager.hpp.E3579931CD0E466D.idx  asset_store.cpp.63B14B6D831D6B49.idx  asset_store.hpp.4773B56523B44D28.idx  glad.c.0B90C81DEC53325F.idx  glad.h.E0A4260AC6358507.idx  main.cpp.1DB3B0A989E12CF3.idx  mat4.hpp.7FF87EE8220DAC43.idx  mesh.cpp.1A4BC0EE1C188F48.idx  mesh.hpp.CD10761A9ECC8DA2.idx  mesh_builder.cpp.2C5EA40CCAA7F7E3.idx  mesh_builder.hpp.B04957D831949EC3.idx  property_bus.cpp.5808F22693C486C1.idx  property_bus.hpp.22B280142782B515.idx  quat.hpp.822D8864427D0251.idx  shader.cpp.E41F0BFA5613AA52.idx  shader.hpp.D249A3178184A170.idx  vec3.hpp.654D6451F5D87911.idx
assets/: heights_keywest.png.aux.xml  heights_keywest_meta.json  heights_keywest_utm.tif.aux.xml
assets/config/: assets.json  controls.json  layouts.json  scenery.json  simulator.json  terrain.json  terrain_compiled.json  terrain_flightgear.json
assets/config/aircraft/: a6m_zero.json  c172p.json  cessna.json  plane.json  template.json  template_jsbsim.json
assets/data/: ourairports_enu.json
assets/fgdata/Effects/: agriculture.eff  birdswarm.eff  chrome.eff  cityLM.eff  cliffs.eff  cloud-impostor.eff  cloud-static.eff  clouds-layered.eff  clouds-thick.eff  clouds-thin.eff  lfeat.eff  lightning.eff  marker-pin.eff  material-off.eff  model-combined-deferred.eff  model-combined.eff  model-default.eff  model-interior-display.eff  model-pbr-chute.eff  model-pbr-transparent.eff  model-pbr-wingflex.eff  model-transparent.eff  oursun.eff  planet-aurora.eff  planet-cloudlayer.eff  road-low.eff  road.eff  rock.eff  runway.eff  schemes.xml  space-combined.eff  surface-lights-directional.eff  terrain-default.eff  terrain-overlay.eff  text-default.eff  thrust-flame.eff  tree-european-deciduous.eff  tree.eff  (+8 more)
assets/imagery/: albedo.jpg.aux.xml
assets/models/: plane.mtl
assets/shaders/: basic.frag  basic.vert  sky.frag  sky.vert  terrain.frag  terrain_fg.frag  textured.frag  textured.vert  ui.frag  ui.vert
assets/terrain/: manifest_seed.json
docs/: ARCHITECTURE.md  architecture.md  assets.md  diagnosis.md  physics.md  physics_deep_dive.md  scenery_architecture.md  terrain_architecture.md  terrain_pipeline.md
include/assets/: asset_store.hpp
include/core/: module.hpp  simulator.hpp
include/game/: aircraft.hpp  terrain.hpp
include/glad/: glad.h
include/graphics/: mesh.hpp  mesh_builder.hpp  render_context.hpp  shader.hpp
include/math/: mat4.hpp  vec3.hpp
include/modules/: aircraft_module.hpp  camera_module.hpp  input_module.hpp  render_module.hpp  terrain_module.hpp
include/simulation/: flight_model.hpp  flight_params.hpp
scripts/: build_scenery.py  get_copernicus_dem.py  get_naip_albedo.py  get_s2_albedo.py
src/: glad.c  main.cpp
src/aircraft/: Aircraft.cpp  Aircraft.hpp  IAircraftSystem.hpp  PropertyPaths.hpp  aircraft.cpp  aircraft.hpp  aircraft_component.hpp  aircraft_config_keys.hpp  aircraft_instance.cpp  aircraft_manager.cpp  aircraft_manager.hpp  aircraft_state.hpp  aircraft_visual.cpp  aircraft_visual.hpp  flight_model.cpp  flight_model.hpp  flight_params.cpp  property_bus.cpp  property_bus.hpp
src/app/: App.cpp  App.hpp  app.cpp  app.hpp  main.cpp  simulator.cpp  simulator.hpp  types.hpp
src/assets/: asset_store.cpp
src/audio/: audio_subsystem.cpp  audio_subsystem.hpp  audio_subsystem.mm
src/core/: app.cpp  app.hpp  main.cpp  property_bus.cpp  property_bus.hpp  property_id.hpp  property_paths.hpp  sim_subsystem.hpp  simulator.cpp  subsystem.hpp  subsystem_manager.cpp  subsystem_manager.hpp
src/environment/: atmosphere.cpp  atmosphere.hpp  atmosphere_manager.cpp
src/game/: aircraft.cpp  terrain.cpp
src/graphics/: asset_store.cpp  asset_store.hpp  camera.cpp  camera.hpp  camera_manager.cpp  glad.c  lighting.cpp  lighting.hpp  mesh.cpp  mesh.hpp  mesh_builder.cpp  mesh_builder.hpp  model.hpp  render_context.hpp  scenery_manager.cpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  texture_array.cpp  texture_array.hpp
src/input/: input.cpp  input.hpp  input_bindings.cpp  input_bindings.hpp  input_manager.cpp  input_manager.hpp
src/managers/: aircraft_module.cpp  aircraft_module.hpp  asset_store.cpp  asset_store.hpp  camera_module.cpp  camera_module.hpp  input_module.cpp  input_module.hpp  render_module.cpp  render_module.hpp  terrain_module.cpp  terrain_module.hpp
src/math/: geo.cpp  geo.hpp  mat4.hpp  quat.cpp  quat.hpp  vec2.hpp  vec3.hpp
src/modules/: aircraft_module.cpp  camera_module.cpp  input_module.cpp  render_module.cpp  terrain_module.cpp
src/scenery/: scenery.cpp  scenery.hpp  scenery_manager.cpp  scenery_manager.hpp
src/simulation/: flight_model.cpp  flight_params.cpp
src/ui/: Anchor.hpp  Text.cpp  Text.hpp  UIElement.hpp  UIManager.cpp  UIManager.hpp  button.cpp  button.hpp  text.cpp  text.hpp  ui_element.hpp  ui_manager.cpp  ui_manager.hpp
src/utils/: config_loader.hpp  xml.cpp  xml.hpp
src/world/: transform.hpp
tools/: convert_c172p_ac3d.py  ourairports_import.cpp  terrainc.cpp
tools/scenery/: README.md  scenery_build.py  scenery_sync.py
tools/terrainc/: color_ramp.cpp  color_ramp.hpp  heightmap.cpp  heightmap.hpp  mask_smoothing.cpp  mask_smoothing.hpp
(+609 files in other folders)
